--- a/14-Notes.Rmd
+++ b/14-Notes.Rmd
@@ -6,7 +6,7 @@ this creates a library for the used R packages.
 ```{r include=FALSE}
 # automatically create a bib database for R packages
 knitr::write_bib(c(
-  .packages(), 'bookdown', 'knitr', 'rmarkdown'
+  .packages(), 'bookdown', 'knitr', 'rmarkdown','ScPoEconometrics'
 ), 'packages.bib')
 ```
 
@@ -22,24 +22,23 @@ install_github("floswald/ScPoEconometrics")
 ```
 
 
-## Book usage
+Packages used:
 
-You can label chapter and section titles using `{#label}` after them, e.g., we can reference Chapter \@ref(intro). If you do not manually label them, there will be automatic labels anyway, e.g., Chapter \@ref(linreg).
+* **bookdown** [@R-bookdown]
+* **knitr** [@xie2015]
+* **ScPoEconometrics** [@R-ScPoEconometrics]
+* **Ecdat** [@R-Ecdat]
+* **Ecfun** [@R-Ecfun]
+* **R** [@R-base]
+* **dplyr** [@R-dplyr]
+* **ggplot2** [@R-ggplot2]
+* **reshape2** [@R-reshape2]
+* **bindrcpp** [@R-bindrcpp]
+* **mvtnorm** [@R-mvtnorm]
+* **plotly** [@R-plotly]
+* **readr** [@R-readr]
+* **readxl** [@R-readxl]
+* **tidyr** [@R-tidyr]
+* **readr** [@R-readr]
 
-Figures and tables with captions will be placed in `figure` and `table` environments, respectively.
 
-```{r nice-fig, fig.cap='Here is a nice figure!', out.width='80%', fig.asp=.75, fig.align='center'}
-par(mar = c(4, 4, .1, .1))
-plot(pressure, type = 'b', pch = 19)
-```
-
-Reference a figure by its code chunk label with the `fig:` prefix, e.g., see Figure \@ref(fig:nice-fig). Similarly, you can reference tables generated from `knitr::kable()`, e.g., see Table \@ref(tab:nice-tab).
-
-```{r nice-tab, tidy=FALSE}
-knitr::kable(
-  head(iris, 20), caption = 'Here is a nice table!',
-  booktabs = TRUE
-)
-```
-
-You can write citations, too. For example, we are using the **bookdown** package [@R-bookdown] in this sample book, which was built on top of R Markdown and **knitr** [@xie2015].
