Update the book

--- a/ScPoEconometrics.tex
+++ b/ScPoEconometrics.tex
@@ -5431,7 +5431,7 @@ useful to remember that the \emph{unconditional mean} of \(y\), i.e.
 \(E[y]\), is going to be the result of regressing \(y\) only on an
 intercept, illustrated by the blue line. This line will always lie in
 between both conditional means. As indicated by the red arrow, the
-estimate of the coefficient on the dummy, \(\alpha\), is equal to the
+estimate of the coefficient on the dummy, \(b_1\), is equal to the
 difference in conditional means for both groups. You should look at our
 app now to deepen your understanding of what's going on here:
 
